via-bnfc/Program/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from Program/Par.y
-----------------------------------------------------------------------------

state 121 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pListDecl -> ListDecl                       (1)
	%start_pListStatement -> ListStatement             (2)
	%start_pListExpr -> ListExpr                       (3)
	%start_pListIdent -> ListIdent                     (4)
	%start_pDecl -> Decl                               (5)
	%start_pStatement -> Statement                     (6)
	%start_pExpr6 -> Expr6                             (7)
	%start_pExpr5 -> Expr5                             (8)
	%start_pExpr4 -> Expr4                             (9)
	%start_pExpr3 -> Expr3                             (10)
	%start_pExpr2 -> Expr2                             (11)
	%start_pExpr1 -> Expr1                             (12)
	%start_pExpr -> Expr                               (13)
	Ident -> L_Ident                                   (14)
	Integer -> L_integ                                 (15)
	Program -> ListDecl                                (16)
	ListDecl ->                                        (17)
	ListDecl -> Decl                                   (18)
	ListDecl -> Decl ';' ListDecl                      (19)
	ListStatement ->                                   (20)
	ListStatement -> Statement                         (21)
	ListStatement -> Statement ';' ListStatement       (22)
	ListExpr ->                                        (23)
	ListExpr -> Expr                                   (24)
	ListExpr -> Expr ',' ListExpr                      (25)
	ListIdent ->                                       (26)
	ListIdent -> Ident                                 (27)
	ListIdent -> Ident ',' ListIdent                   (28)
	Decl -> 'return' Expr                              (29)
	Decl -> Statement                                  (30)
	Decl -> 'def' Ident '(' ListIdent ')' ':' '{' ListDecl '}'   (31)
	Statement -> Ident '=' Expr                        (32)
	Statement -> Ident '(' ListExpr ')'                (33)
	Statement -> 'while' '(' Expr ')' ':' '{' ListDecl '}'   (34)
	Statement -> 'for' Ident 'in' 'range' '(' Expr ',' Expr ')' ':' '{' ListDecl '}'   (35)
	Statement -> 'if' Expr ':' '{' ListDecl '}'        (36)
	Statement -> 'if' Expr ':' '{' ListDecl '}' ';' 'else' ':' '{' ListDecl '}'   (37)
	Expr6 -> Integer                                   (38)
	Expr6 -> Ident                                     (39)
	Expr6 -> Ident '(' ListExpr ')'                    (40)
	Expr5 -> '-' Expr6                                 (41)
	Expr5 -> Expr6                                     (42)
	Expr5 -> '(' Expr ')'                              (43)
	Expr4 -> 'not' Expr5                               (44)
	Expr4 -> Expr5                                     (45)
	Expr3 -> Expr3 '*' Expr4                           (46)
	Expr3 -> Expr3 '/' Expr4                           (47)
	Expr3 -> Expr3 '%' Expr4                           (48)
	Expr3 -> Expr4                                     (49)
	Expr2 -> Expr2 '+' Expr3                           (50)
	Expr2 -> Expr2 '-' Expr3                           (51)
	Expr2 -> Expr3                                     (52)
	Expr1 -> Expr1 'and' Expr2                         (53)
	Expr1 -> Expr1 'or' Expr2                          (54)
	Expr1 -> Expr1 'xor' Expr2                         (55)
	Expr1 -> Expr2                                     (56)
	Expr -> Expr '<' Expr1                             (57)
	Expr -> Expr '>' Expr1                             (58)
	Expr -> Expr '<=' Expr1                            (59)
	Expr -> Expr '>=' Expr1                            (60)
	Expr -> Expr '==' Expr1                            (61)
	Expr -> Expr '!=' Expr1                            (62)
	Expr -> Expr1                                      (63)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!='           { PT _ (TS _ 1) }
	'%'            { PT _ (TS _ 2) }
	'('            { PT _ (TS _ 3) }
	')'            { PT _ (TS _ 4) }
	'*'            { PT _ (TS _ 5) }
	'+'            { PT _ (TS _ 6) }
	','            { PT _ (TS _ 7) }
	'-'            { PT _ (TS _ 8) }
	'/'            { PT _ (TS _ 9) }
	':'            { PT _ (TS _ 10) }
	';'            { PT _ (TS _ 11) }
	'<'            { PT _ (TS _ 12) }
	'<='           { PT _ (TS _ 13) }
	'='            { PT _ (TS _ 14) }
	'=='           { PT _ (TS _ 15) }
	'>'            { PT _ (TS _ 16) }
	'>='           { PT _ (TS _ 17) }
	'and'          { PT _ (TS _ 18) }
	'def'          { PT _ (TS _ 19) }
	'else'         { PT _ (TS _ 20) }
	'for'          { PT _ (TS _ 21) }
	'if'           { PT _ (TS _ 22) }
	'in'           { PT _ (TS _ 23) }
	'not'          { PT _ (TS _ 24) }
	'or'           { PT _ (TS _ 25) }
	'range'        { PT _ (TS _ 26) }
	'return'       { PT _ (TS _ 27) }
	'while'        { PT _ (TS _ 28) }
	'xor'          { PT _ (TS _ 29) }
	'{'            { PT _ (TS _ 30) }
	'}'            { PT _ (TS _ 31) }
	L_Ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pListDecl rule  1
	%start_pListStatement rule  2
	%start_pListExpr rule  3
	%start_pListIdent rule  4
	%start_pDecl    rule  5
	%start_pStatement rule  6
	%start_pExpr6   rule  7
	%start_pExpr5   rule  8
	%start_pExpr4   rule  9
	%start_pExpr3   rule  10
	%start_pExpr2   rule  11
	%start_pExpr1   rule  12
	%start_pExpr    rule  13
	Ident           rule  14
	Integer         rule  15
	Program         rule  16
	ListDecl        rules 17, 18, 19
	ListStatement   rules 20, 21, 22
	ListExpr        rules 23, 24, 25
	ListIdent       rules 26, 27, 28
	Decl            rules 29, 30, 31
	Statement       rules 32, 33, 34, 35, 36, 37
	Expr6           rules 38, 39, 40
	Expr5           rules 41, 42, 43
	Expr4           rules 44, 45
	Expr3           rules 46, 47, 48, 49
	Expr2           rules 50, 51, 52
	Expr1           rules 53, 54, 55, 56
	Expr            rules 57, 58, 59, 60, 61, 62, 63

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram -> . Program                        (rule 0)

	'def'          shift, and enter state 42
	'for'          shift, and enter state 37
	'if'           shift, and enter state 38
	'return'       shift, and enter state 43
	'while'        shift, and enter state 39
	L_Ident        shift, and enter state 15
	%eof           reduce using rule 17

	Ident          goto state 35
	Program        goto state 52
	ListDecl       goto state 53
	Decl           goto state 51
	Statement      goto state 41

State 1

	%start_pListDecl -> . ListDecl                      (rule 1)

	'def'          shift, and enter state 42
	'for'          shift, and enter state 37
	'if'           shift, and enter state 38
	'return'       shift, and enter state 43
	'while'        shift, and enter state 39
	L_Ident        shift, and enter state 15
	%eof           reduce using rule 17

	Ident          goto state 35
	ListDecl       goto state 50
	Decl           goto state 51
	Statement      goto state 41

State 2

	%start_pListStatement -> . ListStatement            (rule 2)

	'for'          shift, and enter state 37
	'if'           shift, and enter state 38
	'while'        shift, and enter state 39
	L_Ident        shift, and enter state 15
	%eof           reduce using rule 20

	Ident          goto state 35
	ListStatement  goto state 48
	Statement      goto state 49

State 3

	%start_pListExpr -> . ListExpr                      (rule 3)

	'('            shift, and enter state 25
	'-'            shift, and enter state 26
	'not'          shift, and enter state 27
	L_Ident        shift, and enter state 15
	L_integ        shift, and enter state 28
	%eof           reduce using rule 23

	Ident          goto state 16
	Integer        goto state 17
	ListExpr       goto state 46
	Expr6          goto state 18
	Expr5          goto state 19
	Expr4          goto state 20
	Expr3          goto state 21
	Expr2          goto state 22
	Expr1          goto state 23
	Expr           goto state 47

State 4

	%start_pListIdent -> . ListIdent                    (rule 4)

	L_Ident        shift, and enter state 15
	%eof           reduce using rule 26

	Ident          goto state 44
	ListIdent      goto state 45

State 5

	%start_pDecl -> . Decl                              (rule 5)

	'def'          shift, and enter state 42
	'for'          shift, and enter state 37
	'if'           shift, and enter state 38
	'return'       shift, and enter state 43
	'while'        shift, and enter state 39
	L_Ident        shift, and enter state 15

	Ident          goto state 35
	Decl           goto state 40
	Statement      goto state 41

State 6

	%start_pStatement -> . Statement                    (rule 6)

	'for'          shift, and enter state 37
	'if'           shift, and enter state 38
	'while'        shift, and enter state 39
	L_Ident        shift, and enter state 15

	Ident          goto state 35
	Statement      goto state 36

State 7

	%start_pExpr6 -> . Expr6                            (rule 7)

	L_Ident        shift, and enter state 15
	L_integ        shift, and enter state 28

	Ident          goto state 16
	Integer        goto state 17
	Expr6          goto state 34

State 8

	%start_pExpr5 -> . Expr5                            (rule 8)

	'('            shift, and enter state 25
	'-'            shift, and enter state 26
	L_Ident        shift, and enter state 15
	L_integ        shift, and enter state 28

	Ident          goto state 16
	Integer        goto state 17
	Expr6          goto state 18
	Expr5          goto state 33

State 9

	%start_pExpr4 -> . Expr4                            (rule 9)

	'('            shift, and enter state 25
	'-'            shift, and enter state 26
	'not'          shift, and enter state 27
	L_Ident        shift, and enter state 15
	L_integ        shift, and enter state 28

	Ident          goto state 16
	Integer        goto state 17
	Expr6          goto state 18
	Expr5          goto state 19
	Expr4          goto state 32

State 10

	%start_pExpr3 -> . Expr3                            (rule 10)

	'('            shift, and enter state 25
	'-'            shift, and enter state 26
	'not'          shift, and enter state 27
	L_Ident        shift, and enter state 15
	L_integ        shift, and enter state 28

	Ident          goto state 16
	Integer        goto state 17
	Expr6          goto state 18
	Expr5          goto state 19
	Expr4          goto state 20
	Expr3          goto state 31

State 11

	%start_pExpr2 -> . Expr2                            (rule 11)

	'('            shift, and enter state 25
	'-'            shift, and enter state 26
	'not'          shift, and enter state 27
	L_Ident        shift, and enter state 15
	L_integ        shift, and enter state 28

	Ident          goto state 16
	Integer        goto state 17
	Expr6          goto state 18
	Expr5          goto state 19
	Expr4          goto state 20
	Expr3          goto state 21
	Expr2          goto state 30

State 12

	%start_pExpr1 -> . Expr1                            (rule 12)

	'('            shift, and enter state 25
	'-'            shift, and enter state 26
	'not'          shift, and enter state 27
	L_Ident        shift, and enter state 15
	L_integ        shift, and enter state 28

	Ident          goto state 16
	Integer        goto state 17
	Expr6          goto state 18
	Expr5          goto state 19
	Expr4          goto state 20
	Expr3          goto state 21
	Expr2          goto state 22
	Expr1          goto state 29

State 13

	%start_pExpr -> . Expr                              (rule 13)

	'('            shift, and enter state 25
	'-'            shift, and enter state 26
	'not'          shift, and enter state 27
	L_Ident        shift, and enter state 15
	L_integ        shift, and enter state 28

	Ident          goto state 16
	Integer        goto state 17
	Expr6          goto state 18
	Expr5          goto state 19
	Expr4          goto state 20
	Expr3          goto state 21
	Expr2          goto state 22
	Expr1          goto state 23
	Expr           goto state 24

State 14

	Ident -> . L_Ident                                  (rule 14)

	L_Ident        shift, and enter state 15


State 15

	Ident -> L_Ident .                                  (rule 14)

	'!='           reduce using rule 14
	'%'            reduce using rule 14
	'('            reduce using rule 14
	')'            reduce using rule 14
	'*'            reduce using rule 14
	'+'            reduce using rule 14
	','            reduce using rule 14
	'-'            reduce using rule 14
	'/'            reduce using rule 14
	':'            reduce using rule 14
	';'            reduce using rule 14
	'<'            reduce using rule 14
	'<='           reduce using rule 14
	'='            reduce using rule 14
	'=='           reduce using rule 14
	'>'            reduce using rule 14
	'>='           reduce using rule 14
	'and'          reduce using rule 14
	'in'           reduce using rule 14
	'or'           reduce using rule 14
	'xor'          reduce using rule 14
	'}'            reduce using rule 14
	%eof           reduce using rule 14


State 16

	Expr6 -> Ident .                                    (rule 39)
	Expr6 -> Ident . '(' ListExpr ')'                   (rule 40)

	'!='           reduce using rule 39
	'%'            reduce using rule 39
	'('            shift, and enter state 82
	')'            reduce using rule 39
	'*'            reduce using rule 39
	'+'            reduce using rule 39
	','            reduce using rule 39
	'-'            reduce using rule 39
	'/'            reduce using rule 39
	':'            reduce using rule 39
	';'            reduce using rule 39
	'<'            reduce using rule 39
	'<='           reduce using rule 39
	'=='           reduce using rule 39
	'>'            reduce using rule 39
	'>='           reduce using rule 39
	'and'          reduce using rule 39
	'or'           reduce using rule 39
	'xor'          reduce using rule 39
	'}'            reduce using rule 39
	%eof           reduce using rule 39


State 17

	Expr6 -> Integer .                                  (rule 38)

	'!='           reduce using rule 38
	'%'            reduce using rule 38
	')'            reduce using rule 38
	'*'            reduce using rule 38
	'+'            reduce using rule 38
	','            reduce using rule 38
	'-'            reduce using rule 38
	'/'            reduce using rule 38
	':'            reduce using rule 38
	';'            reduce using rule 38
	'<'            reduce using rule 38
	'<='           reduce using rule 38
	'=='           reduce using rule 38
	'>'            reduce using rule 38
	'>='           reduce using rule 38
	'and'          reduce using rule 38
	'or'           reduce using rule 38
	'xor'          reduce using rule 38
	'}'            reduce using rule 38
	%eof           reduce using rule 38


State 18

	Expr5 -> Expr6 .                                    (rule 42)

	'!='           reduce using rule 42
	'%'            reduce using rule 42
	')'            reduce using rule 42
	'*'            reduce using rule 42
	'+'            reduce using rule 42
	','            reduce using rule 42
	'-'            reduce using rule 42
	'/'            reduce using rule 42
	':'            reduce using rule 42
	';'            reduce using rule 42
	'<'            reduce using rule 42
	'<='           reduce using rule 42
	'=='           reduce using rule 42
	'>'            reduce using rule 42
	'>='           reduce using rule 42
	'and'          reduce using rule 42
	'or'           reduce using rule 42
	'xor'          reduce using rule 42
	'}'            reduce using rule 42
	%eof           reduce using rule 42


State 19

	Expr4 -> Expr5 .                                    (rule 45)

	'!='           reduce using rule 45
	'%'            reduce using rule 45
	')'            reduce using rule 45
	'*'            reduce using rule 45
	'+'            reduce using rule 45
	','            reduce using rule 45
	'-'            reduce using rule 45
	'/'            reduce using rule 45
	':'            reduce using rule 45
	';'            reduce using rule 45
	'<'            reduce using rule 45
	'<='           reduce using rule 45
	'=='           reduce using rule 45
	'>'            reduce using rule 45
	'>='           reduce using rule 45
	'and'          reduce using rule 45
	'or'           reduce using rule 45
	'xor'          reduce using rule 45
	'}'            reduce using rule 45
	%eof           reduce using rule 45


State 20

	Expr3 -> Expr4 .                                    (rule 49)

	'!='           reduce using rule 49
	'%'            reduce using rule 49
	')'            reduce using rule 49
	'*'            reduce using rule 49
	'+'            reduce using rule 49
	','            reduce using rule 49
	'-'            reduce using rule 49
	'/'            reduce using rule 49
	':'            reduce using rule 49
	';'            reduce using rule 49
	'<'            reduce using rule 49
	'<='           reduce using rule 49
	'=='           reduce using rule 49
	'>'            reduce using rule 49
	'>='           reduce using rule 49
	'and'          reduce using rule 49
	'or'           reduce using rule 49
	'xor'          reduce using rule 49
	'}'            reduce using rule 49
	%eof           reduce using rule 49


State 21

	Expr3 -> Expr3 . '*' Expr4                          (rule 46)
	Expr3 -> Expr3 . '/' Expr4                          (rule 47)
	Expr3 -> Expr3 . '%' Expr4                          (rule 48)
	Expr2 -> Expr3 .                                    (rule 52)

	'!='           reduce using rule 52
	'%'            shift, and enter state 71
	')'            reduce using rule 52
	'*'            shift, and enter state 72
	'+'            reduce using rule 52
	','            reduce using rule 52
	'-'            reduce using rule 52
	'/'            shift, and enter state 73
	':'            reduce using rule 52
	';'            reduce using rule 52
	'<'            reduce using rule 52
	'<='           reduce using rule 52
	'=='           reduce using rule 52
	'>'            reduce using rule 52
	'>='           reduce using rule 52
	'and'          reduce using rule 52
	'or'           reduce using rule 52
	'xor'          reduce using rule 52
	'}'            reduce using rule 52
	%eof           reduce using rule 52


State 22

	Expr2 -> Expr2 . '+' Expr3                          (rule 50)
	Expr2 -> Expr2 . '-' Expr3                          (rule 51)
	Expr1 -> Expr2 .                                    (rule 56)

	'!='           reduce using rule 56
	')'            reduce using rule 56
	'+'            shift, and enter state 74
	','            reduce using rule 56
	'-'            shift, and enter state 75
	':'            reduce using rule 56
	';'            reduce using rule 56
	'<'            reduce using rule 56
	'<='           reduce using rule 56
	'=='           reduce using rule 56
	'>'            reduce using rule 56
	'>='           reduce using rule 56
	'and'          reduce using rule 56
	'or'           reduce using rule 56
	'xor'          reduce using rule 56
	'}'            reduce using rule 56
	%eof           reduce using rule 56


State 23

	Expr1 -> Expr1 . 'and' Expr2                        (rule 53)
	Expr1 -> Expr1 . 'or' Expr2                         (rule 54)
	Expr1 -> Expr1 . 'xor' Expr2                        (rule 55)
	Expr -> Expr1 .                                     (rule 63)

	'!='           reduce using rule 63
	')'            reduce using rule 63
	','            reduce using rule 63
	':'            reduce using rule 63
	';'            reduce using rule 63
	'<'            reduce using rule 63
	'<='           reduce using rule 63
	'=='           reduce using rule 63
	'>'            reduce using rule 63
	'>='           reduce using rule 63
	'and'          shift, and enter state 76
	'or'           shift, and enter state 77
	'xor'          shift, and enter state 78
	'}'            reduce using rule 63
	%eof           reduce using rule 63


State 24

	%start_pExpr -> Expr .                              (rule 13)
	Expr -> Expr . '<' Expr1                            (rule 57)
	Expr -> Expr . '>' Expr1                            (rule 58)
	Expr -> Expr . '<=' Expr1                           (rule 59)
	Expr -> Expr . '>=' Expr1                           (rule 60)
	Expr -> Expr . '==' Expr1                           (rule 61)
	Expr -> Expr . '!=' Expr1                           (rule 62)

	'!='           shift, and enter state 56
	'<'            shift, and enter state 58
	'<='           shift, and enter state 59
	'=='           shift, and enter state 60
	'>'            shift, and enter state 61
	'>='           shift, and enter state 62
	%eof           accept


State 25

	Expr5 -> '(' . Expr ')'                             (rule 43)

	'('            shift, and enter state 25
	'-'            shift, and enter state 26
	'not'          shift, and enter state 27
	L_Ident        shift, and enter state 15
	L_integ        shift, and enter state 28

	Ident          goto state 16
	Integer        goto state 17
	Expr6          goto state 18
	Expr5          goto state 19
	Expr4          goto state 20
	Expr3          goto state 21
	Expr2          goto state 22
	Expr1          goto state 23
	Expr           goto state 81

State 26

	Expr5 -> '-' . Expr6                                (rule 41)

	L_Ident        shift, and enter state 15
	L_integ        shift, and enter state 28

	Ident          goto state 16
	Integer        goto state 17
	Expr6          goto state 80

State 27

	Expr4 -> 'not' . Expr5                              (rule 44)

	'('            shift, and enter state 25
	'-'            shift, and enter state 26
	L_Ident        shift, and enter state 15
	L_integ        shift, and enter state 28

	Ident          goto state 16
	Integer        goto state 17
	Expr6          goto state 18
	Expr5          goto state 79

State 28

	Integer -> L_integ .                                (rule 15)

	'!='           reduce using rule 15
	'%'            reduce using rule 15
	')'            reduce using rule 15
	'*'            reduce using rule 15
	'+'            reduce using rule 15
	','            reduce using rule 15
	'-'            reduce using rule 15
	'/'            reduce using rule 15
	':'            reduce using rule 15
	';'            reduce using rule 15
	'<'            reduce using rule 15
	'<='           reduce using rule 15
	'=='           reduce using rule 15
	'>'            reduce using rule 15
	'>='           reduce using rule 15
	'and'          reduce using rule 15
	'or'           reduce using rule 15
	'xor'          reduce using rule 15
	'}'            reduce using rule 15
	%eof           reduce using rule 15


State 29

	%start_pExpr1 -> Expr1 .                            (rule 12)
	Expr1 -> Expr1 . 'and' Expr2                        (rule 53)
	Expr1 -> Expr1 . 'or' Expr2                         (rule 54)
	Expr1 -> Expr1 . 'xor' Expr2                        (rule 55)

	'and'          shift, and enter state 76
	'or'           shift, and enter state 77
	'xor'          shift, and enter state 78
	%eof           accept


State 30

	%start_pExpr2 -> Expr2 .                            (rule 11)
	Expr2 -> Expr2 . '+' Expr3                          (rule 50)
	Expr2 -> Expr2 . '-' Expr3                          (rule 51)

	'+'            shift, and enter state 74
	'-'            shift, and enter state 75
	%eof           accept


State 31

	%start_pExpr3 -> Expr3 .                            (rule 10)
	Expr3 -> Expr3 . '*' Expr4                          (rule 46)
	Expr3 -> Expr3 . '/' Expr4                          (rule 47)
	Expr3 -> Expr3 . '%' Expr4                          (rule 48)

	'%'            shift, and enter state 71
	'*'            shift, and enter state 72
	'/'            shift, and enter state 73
	%eof           accept


State 32

	%start_pExpr4 -> Expr4 .                            (rule 9)

	%eof           accept


State 33

	%start_pExpr5 -> Expr5 .                            (rule 8)

	%eof           accept


State 34

	%start_pExpr6 -> Expr6 .                            (rule 7)

	%eof           accept


State 35

	Statement -> Ident . '=' Expr                       (rule 32)
	Statement -> Ident . '(' ListExpr ')'               (rule 33)

	'('            shift, and enter state 69
	'='            shift, and enter state 70


State 36

	%start_pStatement -> Statement .                    (rule 6)

	%eof           accept


State 37

	Statement -> 'for' . Ident 'in' 'range' '(' Expr ',' Expr ')' ':' '{' ListDecl '}'    (rule 35)

	L_Ident        shift, and enter state 15

	Ident          goto state 68

State 38

	Statement -> 'if' . Expr ':' '{' ListDecl '}'       (rule 36)
	Statement -> 'if' . Expr ':' '{' ListDecl '}' ';' 'else' ':' '{' ListDecl '}'    (rule 37)

	'('            shift, and enter state 25
	'-'            shift, and enter state 26
	'not'          shift, and enter state 27
	L_Ident        shift, and enter state 15
	L_integ        shift, and enter state 28

	Ident          goto state 16
	Integer        goto state 17
	Expr6          goto state 18
	Expr5          goto state 19
	Expr4          goto state 20
	Expr3          goto state 21
	Expr2          goto state 22
	Expr1          goto state 23
	Expr           goto state 67

State 39

	Statement -> 'while' . '(' Expr ')' ':' '{' ListDecl '}'    (rule 34)

	'('            shift, and enter state 66


State 40

	%start_pDecl -> Decl .                              (rule 5)

	%eof           accept


State 41

	Decl -> Statement .                                 (rule 30)

	';'            reduce using rule 30
	'}'            reduce using rule 30
	%eof           reduce using rule 30


State 42

	Decl -> 'def' . Ident '(' ListIdent ')' ':' '{' ListDecl '}'    (rule 31)

	L_Ident        shift, and enter state 15

	Ident          goto state 65

State 43

	Decl -> 'return' . Expr                             (rule 29)

	'('            shift, and enter state 25
	'-'            shift, and enter state 26
	'not'          shift, and enter state 27
	L_Ident        shift, and enter state 15
	L_integ        shift, and enter state 28

	Ident          goto state 16
	Integer        goto state 17
	Expr6          goto state 18
	Expr5          goto state 19
	Expr4          goto state 20
	Expr3          goto state 21
	Expr2          goto state 22
	Expr1          goto state 23
	Expr           goto state 64

State 44

	ListIdent -> Ident .                                (rule 27)
	ListIdent -> Ident . ',' ListIdent                  (rule 28)

	')'            reduce using rule 27
	','            shift, and enter state 63
	%eof           reduce using rule 27


State 45

	%start_pListIdent -> ListIdent .                    (rule 4)

	%eof           accept


State 46

	%start_pListExpr -> ListExpr .                      (rule 3)

	%eof           accept


State 47

	ListExpr -> Expr .                                  (rule 24)
	ListExpr -> Expr . ',' ListExpr                     (rule 25)
	Expr -> Expr . '<' Expr1                            (rule 57)
	Expr -> Expr . '>' Expr1                            (rule 58)
	Expr -> Expr . '<=' Expr1                           (rule 59)
	Expr -> Expr . '>=' Expr1                           (rule 60)
	Expr -> Expr . '==' Expr1                           (rule 61)
	Expr -> Expr . '!=' Expr1                           (rule 62)

	'!='           shift, and enter state 56
	')'            reduce using rule 24
	','            shift, and enter state 57
	'<'            shift, and enter state 58
	'<='           shift, and enter state 59
	'=='           shift, and enter state 60
	'>'            shift, and enter state 61
	'>='           shift, and enter state 62
	%eof           reduce using rule 24


State 48

	%start_pListStatement -> ListStatement .            (rule 2)

	%eof           accept


State 49

	ListStatement -> Statement .                        (rule 21)
	ListStatement -> Statement . ';' ListStatement      (rule 22)

	';'            shift, and enter state 55
	%eof           reduce using rule 21


State 50

	%start_pListDecl -> ListDecl .                      (rule 1)

	%eof           accept


State 51

	ListDecl -> Decl .                                  (rule 18)
	ListDecl -> Decl . ';' ListDecl                     (rule 19)

	';'            shift, and enter state 54
	'}'            reduce using rule 18
	%eof           reduce using rule 18


State 52

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 53

	Program -> ListDecl .                               (rule 16)

	%eof           reduce using rule 16


State 54

	ListDecl -> Decl ';' . ListDecl                     (rule 19)

	'def'          shift, and enter state 42
	'for'          shift, and enter state 37
	'if'           shift, and enter state 38
	'return'       shift, and enter state 43
	'while'        shift, and enter state 39
	'}'            reduce using rule 17
	L_Ident        shift, and enter state 15
	%eof           reduce using rule 17
